# pipex

./: .gitignore  CMakeLists.txt  Makefile  README.md
includes/: libft.h  pipex.h  pipex_bonus.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  (+5 more)
shouldBeRemoved/: Intra Projects pipex Edit.mht
shouldBeRemoved/minishell/: Makefile
shouldBeRemoved/minishell/headers/: commands.h  commlist.h  envp.h  error.h  minishell.h  parser.h  signals.h  utils.h
shouldBeRemoved/minishell/srcs/: main.c
shouldBeRemoved/pipex_tested/: Makefile  bonus_Makefile  main_Makefile
shouldBeRemoved/pipex_tested/bonus_srcs/: heredoc_exec_bonus.c  main_exec_bonus.c  pipex_bonus.c
shouldBeRemoved/pipex_tested/includes/: pipex.h
shouldBeRemoved/pipex_tested/main_srcs/: main_exec.c  pipex.c
shouldBeRemoved/pipex_tested/shared_srcs/: append.c  cmd_args.c  compare.c  duplicate.c  (+9 more)
src/: execution.c  get_next_line.c  main.c  main_utils.c  util.c
src_bonus/: execution_bonus.c  get_next_line_bonus.c  main_bonus.c  util_bonus.c
(+54 files in other folders)
